third_party/move/move-compiler-v2/tests/checking-lang-v1/direct_visibility.move
module 0x815::a {
    package fun f() {}
}

module 0x815::b {
    friend 0x815::c;
    friend fun f() {}
}

module 0x815::c {
    friend fun f() {
        0x815::a::f();
        0x815::b::f();
    }
}
